[tool.poetry]
name = "task-graph"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

packages = [
    { include = "taskgraph", from = "."}
]

[tool.poetry.dependencies]
python = "^3.10"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"